objects/ssot__StationaryAssetCarbonFootprint__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AllocationStatus__c</fullName>
        <label>Allocation Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AnnualEmssnInventoryId__c</fullName>
        <label>Annual Emissions Inventory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuditApprovalStatus__c</fullName>
        <label>Audit Approval Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BuildingEnergyIntensityId__c</fullName>
        <label>Building Energy Intensity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataGapStatus__c</fullName>
        <label>Data Gap Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FootprintStage__c</fullName>
        <label>Footprint Stage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Stationary Asset Carbon Footprint Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OccupiedFloorAreaNumber__c</fullName>
        <label>Occupied Floor Area</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OccupiedFloorAreaUnitId__c</fullName>
        <label>Occupied Floor Area Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrevYrAnnlCarbonFootprintId__c</fullName>
        <label>Previous Year Annual Carbon Footprint</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrevYrDataCenterPueNumber__c</fullName>
        <label>Previous Year  DataCenter Pue</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ReportingDate__c</fullName>
        <label>Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ReportingYear__c</fullName>
        <label>Reporting Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RgnlBldgEnergyIntensityId__c</fullName>
        <label>Regional Building Energy Intensity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StnryAssetEnvrSrcId__c</fullName>
        <label>Stationary Asset Environmental Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope1EmissionsNumber__c</fullName>
        <label>Supl Scope 1 Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope2LocBasedEmssnNumber__c</fullName>
        <label>Supl Scope 2 Loc Based Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope2MarketBasedEmssnNumber__c</fullName>
        <label>Supl Scope 2 Market Based Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope3DnstrmEmissionsNumber__c</fullName>
        <label>Supl Scope 3 Downstream Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope3UpstrmEmissionsNumber__c</fullName>
        <label>Supl Scope 3 Upstream Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalFloorAreaNumber__c</fullName>
        <label>Total Floor Area</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalFloorAreaUnitId__c</fullName>
        <label>Total Floor Area Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383677923_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StationaryAssetCarbonFootprint_Occup_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>StationaryAssetCarbonFootprint_Occup_rel</relationshipLabel>
        <relationshipName>rel_1747383677923_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383679720_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StationaryAssetCarbonFootprint_PrevY_rel</label>
        <referenceTo>ssot__StationaryAssetCarbonFootprint__dlm</referenceTo>
        <relationshipLabel>StationaryAssetCarbonFootprint_PrevY_rel</relationshipLabel>
        <relationshipName>rel_1747383679720_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383683380_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StationaryAssetCarbonFootprint_Annua_rel</label>
        <referenceTo>ssot__AnnualEmissionsInventory__dlm</referenceTo>
        <relationshipLabel>StationaryAssetCarbonFootprint_Annua_rel</relationshipLabel>
        <relationshipName>rel_1747383683380_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>